test(api): add integration and unit tests to achieve >90% coverage
- Add tests for controllers using MockMvc
- Add @DataJpaTest for repository adapters
- Refactor existing tests to remove ReturnsDeepStubs anti-pattern